<resources>
    <string name="app_name">Order Note</string>

    <!-- Common -->
    <string name="copyright">Copyrightⓒ 2019. msLeeWhole All Rights Reserved</string>
    <string name="confirm">확인</string>
    <string name="setting">설정</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="delete">삭제</string>
    <string name="change">수정</string>
    <string name="loading">Loading...</string>
    <string name="name">이름(상호)</string>
    <string name="mobile">핸드폰</string>
    <string name="tel">전화번호</string>
    <string name="product_name">상품명</string>
    <string name="order_date">주문날짜</string>
    <string name="release_yn">출고</string>
    <string name="change2">변경</string>
    <string name="second">초</string>
    <string name="required_input_msg">* : 필수입력</string>
    <string name="no_data">No Data!</string>
    <string name="search">검색</string>


    <!-- Password -->
    <string name="wrong_pw">비밀번호가 틀렸습니다!!!!</string>
    <string name="input_pw">비밀번호 입력</string>
    <string name="input_new_pw">새 비밀번호 입력</string>
    <string name="input_new_pw_confirm">새 비밀번호 확인</string>
    <string name="noti_pw">초기 비밀번호는 0000 입니다.</string>

    <!-- Main -->
    <string name="main_order_list">주&#160;&#160;문&#160;&#160;내&#160;&#160;역</string>
    <string name="main_cunsumer_list">주 문 자 정 보</string>
    <string name="main_search">검&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;색</string>

    <!-- Order List -->
    <string name="title_order_list">주문내역</string>
    <string name="add_order">주문작성</string>
    <string name="confirm_order">주문확인</string>
    <string name="change_order">주문수정</string>
    <string name="label_product_name">상품명 :</string>
    <string name="label_order_date">주문날짜 :</string>
    <string name="label_release_date">출고예정일 :</string>
    <string name="label_coast_price">원가 :</string>
    <string name="label_selling_price">판매금액 :</string>
    <string name="label_release">출고완료여부 :</string>
    <string name="label_product_image">상품이미지 :</string>
    <string name="label_shipping_address">배송주소 :</string>
    <string name="label_account_name">거래처명 : </string>
    <string name="label_content">함량 : </string>
    <string name="label_color">컬러 : </string>
    <string name="label_size">사이즈 : </string>
    <string name="label_transform">변형 : </string>
    <string name="label_promise_date">손님약속날짜 : </string>
    <string name="product_name_hint">상품명을 입력하세요.</string>
    <string name="hint_order_date">주문받은 날짜를 입력하세요.</string>
    <string name="hint_release_date">출고예정일을 입력하세요.</string>
    <string name="hint_coast_price">원가금액을 입력하세요.</string>
    <string name="hint_selling_price">판매금액을 입력하세요.</string>
    <string name="hint_release">출고여부(Y/N 입력, 미입력시 자동 N).</string>
    <string name="hint_product_image">상품이미지를 선택하세요.</string>
    <string name="hint_shipping_address">배송주소를 입력하세요.</string>
    <string name="hint_account_name">거래처명을 입력하세요.</string>
    <string name="hint_content">금 함량을 입력하세요.</string>
    <string name="hint_color">색상을 입력하세요.</string>
    <string name="hint_size">사이즈를 입력하세요.</string>
    <string name="hint_transform">변형사항을 입력하세요.</string>
    <string name="hint_promise_date">손님과의 약속 날짜를 입력하세요.</string>
    <string name="hint_content_other">기타 함량 정보를 입력하세요.</string>
    <string name="cancel_add_order">작성중이던 주문내역 추가를 취소 하시겠습니까?</string>
    <string name="delete_order">선택하신 주문내역을 삭제 하시겠습니까??\n 이름(상호) : %1$s\n 핸드폰 : %2$s\n제품명 : %3$s</string>
    <string name="order_check_msg">이름(상호)와 전화번호 / 상품명은 필수 입력사항 입니다.\n필수 입력사항 입력을 확인 해 주세요.!!</string>

    <!-- Customer List -->
    <string name="title_custmer_list">주문자 정보</string>
    <string name="add_custmer">주문자 추가</string>
    <string name="select_custmer">주문자 선택</string>
    <string name="detail_custmer">주문자 정보 상세</string>
    <string name="change_custmer">주문자 정보 수정</string>
    <string name="label_name">이름(상호) : </string>
    <string name="label_mobile">핸드폰 : </string>
    <string name="label_tel">전화 : </string>
    <string name="label_emal">이메일 : </string>
    <string name="label_other">기타 : </string>
    <string name="name_hint">이름(상호)을 입력하세요.</string>
    <string name="mobile_hint">핸드폰 번호를 - 없이 입력하세요.</string>
    <string name="tel_hint">전화번호를 - 없이 입력하세요.</string>
    <string name="email_hint">이메일을 입력하세요.</string>
    <string name="other_hint">기타 특이사항을 입력하세요.</string>
    <string name="cancel_add_customer">작성중이던 주문자 추가를 취소 하시겠습니까?</string>
    <string name="cancel_change_customer">수정중이던 주문자 정보를 취소 하시겠습니까?</string>
    <string name="save_add_customer">작성중인 주문자 주문자 정보를 저장 하시겠습니까??\n 이름(상호) : %1$s\n 전화번호 : %2$s</string>
    <string name="save_change_customer">수정중인 주문자 주문자 정보를 저장 하시겠습니까??\n 이름(상호) : %1$s\n 전화번호 : %2$s</string>
    <string name="customer_check_msg">이름(상호)와 핸드폰은 필수 입력사항 입니다.\n필수 입력사항 입력을 확인 해 주세요.!!</string>
    <string name="not_coustomer">저장된\n정보가 없습니다.!!</string>
    <string name="delete_customer">선택하신 주문자 정보를 삭제 하시겠습니까??\n 이름(상호) : %1$s\n 전화번호 : %2$s</string>
    <string name="change_customer_msg">선택하신 주문자 정보를 변경 하시겠습니까??</string>
    <string name="select_customer_msg">선택하신 주문자 정보를 가져 오시겠습니까??\n 이름(상호) : %1$s\n 전화번호 : %2$s</string>
    <string name="duplication_customer_msg">전화번소가 동일한 주문자가 있습니다. 전화번호 확인 바랍니다.</string>

    <!-- 설정 -->
    <string name="setting_password_lable">비밀번호 :</string>
    <string name="setting_app_lock">화면잠금 기능 :</string>
    <string name="setting_app_lock_time">잠금시간 설정 :</string>
    <string name="setting_change_password">비밀번호 변경</string>
    <string name="setting_current_password">현재 비밀번호 :</string>
    <string name="setting_new_password">새 비밀번호 :</string>
    <string name="setting_new_password_confirm">새 비밀번호 확인 :</string>
    <string name="setting_input_password">비밀번호를 입력해 주세요.!!!</string>
    <string name="setting_input_new_password">새 비밀번호를 입력해 주세요.!!!</string>
    <string name="setting_input_confirm_password">확인 비밀번호를 입력해 주세요.!!!</string>
    <string name="setting_error_password">비밀번호가 틀렸습니다.</string>
    <string name="setting_error_new_password">새 비밀번호와 확인 비밀번호가 일치하지 않습니다.</string>
    <string name="setting_complete_password">비밀번호가 정상적으로 변경되었습니다.</string>

</resources>
