<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <!-- Title -->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/main">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_centerVertical="true"
                    android:text="@string/add_custmer"
                    android:textColor="@android:color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"/>
        </RelativeLayout>

        <!-- 이름 -->
        <LinearLayout
                android:id="@+id/dialog_add_customer_name_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/label_name"
                    android:textColor="@color/string"
                    android:textSize="15dp"/>
            <EditText
                    android:id="@+id/dialog_add_customer_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/name_hint"
                    android:textSize="15dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/main">
        </LinearLayout>

        <!-- Mobile -->
        <LinearLayout
                android:id="@+id/dialog_add_customer_mobile_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/label_mobile"
                    android:textColor="@color/string"
                    android:textSize="15dp"/>
            <EditText
                    android:id="@+id/dialog_add_customer_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/mobile_hint"
                    android:textSize="15dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/main">
        </LinearLayout>

        <!-- Tel -->
        <LinearLayout
                android:id="@+id/dialog_add_customer_tel_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/label_tel"
                    android:textColor="@color/string"
                    android:textSize="15dp"/>
            <EditText
                    android:id="@+id/dialog_add_customer_tel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/tel_hint"
                    android:textSize="15dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/main">
        </LinearLayout>

        <!-- 이메일 -->
        <LinearLayout
                android:id="@+id/dialog_add_customer_email_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/label_emal"
                    android:textColor="@color/string"
                    android:textSize="15dp"/>
            <EditText
                    android:id="@+id/dialog_add_customer_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/email_hint"
                    android:textSize="15dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/main">
        </LinearLayout>

        <!-- 기타 -->
        <LinearLayout
                android:id="@+id/dialog_add_customer_other_layout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:layout_gravity="start"
                    android:gravity="center_vertical"
                    android:text="@string/label_other"
                    android:textColor="@color/string"
                    android:textSize="15dp"/>
            <EditText
                    android:id="@+id/dialog_add_customer_other"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:hint="@string/other_hint"
                    android:textSize="15dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">


            <Button
                    android:id="@+id/dialog_add_customer_cancel_btn"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="@string/cancel"
            />

            <Button
                    android:id="@+id/dialog_add_customer_save_btn"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/save"
            />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>