<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".PasswordActivity">

    <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text=""
            android:textSize="30dp"
            android:textColor="@color/string"
            android:padding="0dp"
            android:hint="@string/input_pw"
            android:background="@color/main"
            android:textCursorDrawable="@drawable/cusor"
            android:inputType="numberPassword"
            android:maxLength="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    <Button
            android:id="@+id/confirm_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/confirm"
            android:textSize="30dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/password"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noti_pw"
        android:textColor="@color/string"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

</android.support.constraint.ConstraintLayout>