<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">
        <LinearLayout
                android:id="@+id/dailog_password_change_body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

            <!-- Title -->
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/main">
                <TextView
                        android:id="@+id/dialog_add_order_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/setting_change_password"
                        android:textColor="@android:color/white"
                        android:textSize="20dp"
                        android:textStyle="bold"/>
            </RelativeLayout>

            <!-- 현재 비밀번호 -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/setting_current_password"
                        android:textSize="20dp"
                        android:textColor="@color/string"
                        android:gravity="center_vertical"
                />
                <EditText
                        android:id="@+id/dailog_password_change_current_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:hint="@string/input_pw"
                        android:background="@color/edit_bg"
                        android:textCursorDrawable="@drawable/cusor"
                        android:inputType="numberPassword"
                        android:maxLength="4"
                        android:textColor="@color/string"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="20dp"
                        />
            </LinearLayout>

            <!-- 새 비밀번호 -->
            <RelativeLayout android:layout_width="match_parent" android:layout_height="80dp">
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/bg">
                </RelativeLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:orientation="horizontal">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/setting_new_password"
                            android:textSize="20dp"
                            android:textColor="@color/string"
                            android:gravity="center_vertical"
                    />
                    <EditText
                            android:id="@+id/dailog_password_change_new_password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:hint="@string/input_new_pw"
                            android:background="@color/edit_bg"
                            android:textCursorDrawable="@drawable/cusor"
                            android:inputType="numberPassword"
                            android:maxLength="4"
                            android:textColor="@color/string"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="20dp"
                    />
                </LinearLayout>
            </RelativeLayout>

            <!-- 새 비밀번호 확인 -->
            <RelativeLayout android:layout_width="match_parent" android:layout_height="80dp">
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/bg">
                </RelativeLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:orientation="horizontal">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/setting_new_password_confirm"
                            android:textSize="20dp"
                            android:textColor="@color/string"
                            android:gravity="center_vertical"
                    />
                    <EditText
                            android:id="@+id/dailog_password_change_new_password_confirm"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:hint="@string/input_new_pw_confirm"
                            android:background="@color/edit_bg"
                            android:textCursorDrawable="@drawable/cusor"
                            android:inputType="numberPassword"
                            android:maxLength="4"
                            android:textColor="@color/string"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="20dp"
                    />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <!-- Btn Layout -->
        <RelativeLayout
                android:id="@+id/dialog_password_change_btn_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            <LinearLayout
                    android:id="@+id/dailog_password_change_add_btn_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                <Button
                        android:id="@+id/dialog_password_cancel"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:text="@string/cancel"/>
                <Button
                        android:id="@+id/dialog_password_change"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/change2"/>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>