<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <!-- Title -->
        <RelativeLayout
                android:id="@+id/dialog_customer_select_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/main"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            <TextView
                    android:id="@+id/dialog_add_customer_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_centerVertical="true"
                    android:text="@string/select_custmer"
                    android:textColor="@android:color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"/>
        </RelativeLayout>

        <RadioGroup
                android:id="@+id/dialog_customer_select_radio_group"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_below="@id/dialog_customer_select_title"
                android:layout_centerHorizontal="true">
            <RadioButton
                    android:id="@+id/dialog_customer_select_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="50dp"
                    android:text="@string/name"
                    android:textColor="@color/string"/>
            <RadioButton
                    android:id="@+id/dialog_customer_select_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tel"
                    android:textColor="@color/string"/>
        </RadioGroup>

        <LinearLayout
                android:id="@+id/dialog_customer_select_input_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_below="@id/dialog_customer_select_radio_group">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@color/edit_bg"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"/>
            <Button
                    android:id="@+id/dialog_customer_select_search_btn"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="5"
                    android:layout_gravity="center_vertical"
                    android:background="@color/main"
                    android:textSize="15dp"
                    android:textColor="@android:color/white"
                    android:text="@string/search"/>
        </LinearLayout>

        <Button
                android:id="@+id/dialog_customer_select_cancel_btn"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:text="@string/cancel"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="vertical"
                android:layout_below="@id/dialog_customer_select_input_layout"
                android:layout_above="@id/dialog_customer_select_cancel_btn">

            <TextView
                    android:id="@+id/dialog_customer_select_no_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="40dp"
                    android:gravity="center"
                    android:visibility="gone"/>

            <LinearLayout
                    android:id="@+id/dialog_customer_select_list_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <LinearLayout
                        android:id="@+id/customer_List_title"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:text="@string/name"
                            android:textSize="20dp"
                            android:textColor="@color/string"
                            android:textStyle="bold"
                            android:gravity="center"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:text="@string/mobile"
                            android:textSize="20dp"
                            android:textColor="@color/string"
                            android:textStyle="bold"
                            android:gravity="center"/>
                    <RelativeLayout
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginRight="15dp">
                    </RelativeLayout>

                </LinearLayout>

                <ListView
                        android:id="@+id/dialog_customer_select_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:divider="@color/main"
                        android:dividerHeight="1dp">
                </ListView>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>